Fix GitHub Actions workflow after project restructure
- Update paths in .github/workflows/tests.yml for new structure
- Fix FAISS index path: faiss_index/ -> storage/faiss_index/
- Update build script path: core/build_faiss_index.py -> scripts/build_faiss_index.py
- Fix coverage paths: --cov=. -> --cov=src
- Update test imports to use src/ prefix
- Fix pytest configuration for new structure
- Remove duplicate test file
- Fix logger error in main.py

All paths now correctly point to the new organized structure:
- src/ - main application code
- config/ - configuration files
- storage/ - database and persistent storage
- scripts/ - utility scripts
- tests/ - test suite
- docs/ - documentation

--- a/config/pytest.ini
+++ b/config/pytest.ini
@@ -35,13 +35,14 @@ minversion = 3.8
 console_output_style = progress
 
 # Coverage options (when using pytest-cov)
-# Run with: pytest --cov=. --cov-report=html
+# Run with: pytest --cov=src --cov-report=html
 # [coverage:run]
-# source = .
+# source = src
 # omit = 
 #     */tests/*
 #     */venv/*
 #     */__pycache__/*
+#     */scripts/*
 
 # Logging
 log_cli = false
