--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,9 +59,9 @@ jobs:
     
     - name: 🏗️ Build FAISS index (if needed)
       run: |
-        if [ ! -f "faiss_index/faiss_index.bin" ]; then
+        if [ ! -f "storage/faiss_index/faiss_index.bin" ]; then
           echo "⚙️ Building FAISS index..."
-          python core/build_faiss_index.py
+          python scripts/build_faiss_index.py
           echo "✅ FAISS index built"
         else
           echo "✅ FAISS index already exists"
@@ -71,7 +71,7 @@ jobs:
       run: |
         echo "🚀 Running ${{ matrix.test-type }} tests..."
         python -m pytest -m ${{ matrix.test-type }} \
-          --cov=. \
+          --cov=src \
           --cov-report=term-missing \
           --cov-report=xml \
           --junitxml=test-results-${{ matrix.test-type }}.xml \
@@ -124,7 +124,7 @@ jobs:
     
     - name: 🧪 Run all tests with coverage
       run: |
-        pytest --cov=. \
+        pytest --cov=src \
           --cov-report=html \
           --cov-report=xml \
           --cov-report=term-missing \
