Updated tests and pytest configuration

--- a/config/pytest.ini
+++ b/config/pytest.ini
@@ -27,6 +27,14 @@ addopts =
     --strict-markers
     --disable-warnings
     -ra
+    --asyncio-mode=auto
+    --cov=src
+    --cov-report=term-missing
+    --cov-report=html:htmlcov
+    --cov-report=xml:coverage.xml
+    --junitxml=test-results.xml
+    --html=test-report.html
+    --self-contained-html
 
 # Minimum Python version
 minversion = 3.8
