--- a/myzamai/requirements-test.txt
+++ b/myzamai/requirements-test.txt
@@ -11,11 +11,6 @@ pytest-timeout>=2.1.0
 # Performance testing
 psutil>=5.9.0
 
-# Code quality
-pytest-flake8>=1.1.0
-pytest-mypy>=0.10.0
-pytest-black>=0.3.0
-
 # Coverage reporting
 coverage>=7.0.0
 
@@ -25,11 +20,8 @@ pytest-html>=3.1.0
 # Parallel testing
 pytest-xdist>=3.0.0
 
-# Benchmarking
+# Benchmarking (optional, for performance tests)
 pytest-benchmark>=4.0.0
-
-# Memory profiling
-pytest-memray>=2.0.0
 
 # Additional utilities
 pytest-clarity>=1.0.0
