--- a/myzamai/pytest.ini
+++ b/myzamai/pytest.ini
@@ -17,8 +17,11 @@ markers =
     performance: marks performance tests
     asyncio: marks asyncio tests
 
-# Test paths
-testpaths = tests
+# Test paths (include both tests/ and scripts/ directories)
+testpaths = tests scripts
+
+# Exclude directories from test discovery (but allow scripts/ for test_*.py files)
+norecursedirs = .git .pytest_cache __pycache__ venv .venv node_modules .mypy_cache .tox dist build *.egg
 
 # Output options
 addopts = 
